force-app/main/default/objects/Session__c/fields/Track_Topic__c.field-meta.xml
<CustomField>
    <fullName>Track_Topic__c</fullName>
    <label>Track/Topic</label>
    <length>120</length>
    <type>Text</type>
</CustomField>