force-app/main/default/objects/Session__c/validationRules/SessionCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>SessionCreation</fullName>
    <active>true</active>
    <description>session cannot exist without event</description>
    <errorConditionFormula>ISBLANK(Event__c) || NOT(ISPICKVAL(Event__r.Status__c, &quot;Open for Registration&quot;))</errorConditionFormula>
    <errorMessage>Sessions can only be created for the events that are open for registration</errorMessage>
</ValidationRule>