force-app/main/default/objects/Session__c/validationRules/SessionDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SessionDateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Session_Start_Time__c &gt;= Session_End_Time__c</errorConditionFormula>
    <errorDisplayField>Session_End_Time__c</errorDisplayField>
    <errorMessage>Session cannot start earlier than session end time</errorMessage>
</ValidationRule>