force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Track_Topic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>