force-app/main/default/objects/Session__c/listViews/group_By_Event.listView-meta.xml
<ListView>
    <fullName>group_By_Event</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>group By Event</label>
</ListView>